# troubleshoot-ai-assist

./: .gitignore  README.md
wildfly-ai-assist/: .env  Dockerfile  pyproject.toml
wildfly-ai-assist/app/: __init__.py  agent.py  api.py  config.py  embed.py  ingest.py  quick_fix.py
wildfly-ai-assist/tests/: test_agent.py
